fixed an issue with dark mode, the page is now light mode by default. Should work with dark-reader extension

--- a/assets/css/00_styles.css
+++ b/assets/css/00_styles.css
@@ -1,22 +1,9 @@
  @import url("./01_intro-section.css");
+ @import url("./02_about.css");
 
 :root{
     --fav-icecream: pink;
 }
-
-@media (prefers-color-scheme: dark) {
-    body {
-      background-color: #222;
-      color: #fff;
-    }
-  }
-  
-  @media (prefers-color-scheme: light) {
-    body {
-      background-color: #fff;
-      color: #222;
-    }
-  }
 
   main{
     position: relative;
@@ -29,6 +16,11 @@
     z-index: 1;
     width: 100%;
     height: 50px;
+  }
+
+  .nav-link{
+    font-weight: bold;
+    color: whitesmoke
   }
 
   
